--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-      <br><br>
+      <br>
 
    <!------------------------  TARJETA PRESENTACIÓN  ------------------------------>
 
@@ -61,7 +61,7 @@
         </div>
         <div class="col-9">
             <h3 class="card-title">Biografia</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima exercitationem ex quasi modi reprehenderit neque totam inventore unde voluptates sit? Commodi qui architecto omnis beatae maiores deleniti voluptas corporis possimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore pariatur porro eius dolores minus vitae modi. Nam sit iste totam odio quae officiis, eveniet quaerat ullam nulla sint corporis? Adipisci.</p>
+            <p>Santiago Ortiz Pulido (02-12-2004) un pequeño joven emprendedor de 16 años, nacido en Bogota (Colombia), desde muy pequeño muy extrovertido lleno de cualidades que lo hacen una persona fenomenal, un gran deportista, bailarin, programador, y dibujante, es un joven lleno de intelecto y muy maduro, tiene una serie de caracteristicas fisicas que lo hacen especial: Un poco bajo, acuerpado, moreno, ojos caca y una sonrisa de oreja a oreja, es amante a los videojuegos, una gran mayoria de su tiempo se lo dedicas aquellos; es amante del mundo, de conocer, viajar, ha estado por toca colombia recorriendola y mirando lo bella que es; es muy sociable, mas que nada coqueto y apuesto con las mujeres; Le gusta estar parchando en la calle con los amigos, buscando planes para divertirse pero siempre alejado de las malas amistades y vicios que puedan destruir los maravillosos sueños que tiene por cumplir :).</p>
         </div>
       </div>
       <p class="card-text"><small class="text-muted">Santy Ortiz Pulido</small></p>
@@ -69,47 +69,186 @@
   </div>
  
 <!------------------------------------ HOBBIES------------------------- -->
-<div class="row row-cols-1 row-cols-md-2">
-    <div class="col mb-4">
-      <div class="card">
-        <img height="315" src="img/video.jpg" class="card-img-top" alt="...">
-        <div class="card-body color">
-          <h5 class="card-title">VideoJuegos</h5>
-          <p class="card-text">Este es mi principal hobbie es el que me saca de la rutina, lo practico todo los dias, juego diferentes videojuegos tanto de PC como de movil, entre mis favoritos estan Call of duty, Rocket league, Among us, Valorant y otros mas, siempre juego depsues de clases, me gusta entrar a torneos, y juego con los panas. :3</p>
+  <div class="row row-cols-1 row-cols-md-2">
+      <div class="col mb-4">
+        <div class="card">
+          <img height="315" src="img/video.jpg" class="card-img-top" alt="...">
+          <div class="card-body color">
+            <h5 class="card-title">VideoJuegos</h5>
+            <p class="card-text">Este es mi principal hobbie es el que me saca de la rutina, lo practico todo los dias, juego diferentes videojuegos tanto de PC como de movil, entre mis favoritos estan Call of duty, Rocket league, Among us, Valorant y otros mas, siempre juego depsues de clases, me gusta entrar a torneos, y juego con los panas. :3</p>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card">
+          <img height="315" src="img/dibujo.jpg" class="card-img-top" alt="...">
+          <div class="card-body color">
+            <h5 class="card-title">Dibujar</h5>
+            <p class="card-text">Dibujar es algo que me saca de la relaidad y me lleva a otro mundo, a la imaginación, no lo practico tan seguido por el tiempo y demas pero cuando lo hago, creo cosas estupendas, coloridad, me gusta recrear personajes conocidos, tambien me gusta lo abstracto y lo creado por mi mismo.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card">
+          <img height="325" src="img/basket.jpg" class="card-img-top" alt="...">
+          <div class="card-body color">
+            <h5 class="card-title">Basketball</h5>
+            <p class="card-text">Todos los domingos practico Basket soy muy bueno, es otro de mis hobbies porque me gusta, es divertido, saludable, juego con los panas e incluso he estado en varios torneos los cuales muchos he ganado, me gusta ganar medallas y estarlo practicando.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card">
+          <img height="305" src="img/parkour.jpg" class="card-img-top" alt="...">
+          <div class="card-body color">
+            <h5 class="card-title">Parkour</h5>
+            <p class="card-text">Para los que no saben el parkour, es una disciplina física basada en la capacidad motriz del individuo. Los practicantes son denominados traceurs y tienen como objetivo trasladarse de un punto a otro del entorno de la manera más sencilla y eficiente; salgo a practicar debes en cuando con mis amigos y me saca de la rutina.</p>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img height="315" src="img/dibujo.jpg" class="card-img-top" alt="...">
-        <div class="card-body color">
-          <h5 class="card-title">Dibujar</h5>
-          <p class="card-text">Dibujar es algo que me saca de la relaidad y me lleva a otro mundo, a la imaginación, no lo practico tan seguido por el tiempo y demas pero cuando lo hago, creo cosas estupendas, coloridad, me gusta recrear personajes conocidos, tambien me gusta lo abstracto y lo creado por mi mismo.</p>
+  <br>
+
+<!-------------------------- MUSICA SLIDER MINI ---------------------------->
+
+<div class="row">
+  <div class="col-6 slider">
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/nanpa.jpg" width="300" height="410" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Nanpa Basico</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="img/nicky.jpg" width="300" height="410" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Nicky  Jam</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="img/Paulo.jpg"width="300" height="410" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Paulo Londra</h5>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-      </div>
+  </div>
+  <div class="div col-6 color">
+    
+    <h4 class="card-title">Nanpa Basico</h4>
+      <p>Francisco David Rosero Serna, mejor conocido como Nanpa Básico, es un cantante del género cultural hip hop. Nació en el municipio Medellín, Antioquia, Colombia, el 08 de abril de 1993.</p>
+      <h4 class="card-title">Paulo Londra</h4>
+      <p>Paulo Londra (12 de abril de 1998) cantante y compositor de Rap y Trap. Nació en ciudad de Córdoba, Argentina.  El cantante creció en un hogar muy unido; asegura que su familia siempre estuvo con el desde los 15 cuando empezo.</p>
+      <h4 class="card-title">Nicky Jam</h4>
+      <p>Nick Rivera Caminero, más conocido como Nicky Jam, es un cantautor estadounidense de reguetón y trap latino que reside en Medellín, Colombia. Desde muy joven comenzó a rapear y al realizar una actuación en un supermercado, llamó la atención de una señora, quien era ejecutiva de un sello discográfico.</p>
+  </div>
+</div>
+<br>
+
+<!------------------------------- CARDS VIDEOS YOUTUBE -------------------------->
+
+<div class="card mb-3">
+  <div class="card-body color">
+    <div class="row ">
+      <div class="col-3"> 
+        <iframe width="320" height="250" src="https://www.youtube.com/embed/u1ustcynFAA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      <div class="col-3">
+        <iframe width="320" height="250" src="https://www.youtube.com/embed/8jsFGdeWNPo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      <div class="col-3">
+        <iframe width="320" height="250" src="https://www.youtube.com/embed/DtpxLyLo9Sk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      <div class="col-3">
+        <iframe width="320" height="250" src="https://www.youtube.com/embed/PvDvJ4d6SiE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img height="305" src="img/basket.jpg" class="card-img-top" alt="...">
-        <div class="card-body color">
-          <h5 class="card-title">Basketball</h5>
-          <p class="card-text">Todos los domingos practico Basket soy muy bueno, es otro de mis hobbies porque me gusta, es divertido, saludable, juego con los panas e incluso he estado en varios torneos los cuales muchos he ganado, me gusta ganar medallas y estarlo practicando.</p>
-        </div>
-      </div>
+  </div>
+</div>
+<br>
+<!------------------------------- CARDS ASPIRACIONES -------------------------->
+
+<div class="card mb-3">
+  <div class="card-body color">
+    <div class="row ">
+      <div class="col-9">
+        <h3 class="card-title">Aspiraciones y sueños por cumplir:</h3>
+        <br>
+        <p>Despues de terminar mi estudio, tengo una seria de metas por cumplir: la primera graduarme y entrar a una universidad a estudiar arquitectura ya sea en el exterior o en el pais, luego de esto ejercer mi trabajo a lo largo del mundo hasta llegar a tener mis cosas y vivir relajadamente con una economia estable, quiero tener fundaciones de animales, quiero viajar por todo el mumdo y tener una pareja.</p>
+       </div>
+       <div class="col-3"> 
+      <img width="260" height="230" src="img/inicial.jpeg" alt="">
+     </div>
     </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img height="305" src="img/parkour.jpg" class="card-img-top" alt="...">
-        <div class="card-body color">
-          <h5 class="card-title">Parkour</h5>
-          <p class="card-text">Para los que no saben el parkour, es una disciplina física basada en la capacidad motriz del individuo. Los practicantes son denominados traceurs y tienen como objetivo trasladarse de un punto a otro del entorno de la manera más sencilla y eficiente; salgo a practicar debes en cuando con mis amigos y me saca de la rutina.</p>
-        </div>
+   <p class="card-text"><small class="text-muted">Santy Ortiz Pulido</small></p>
+  </div>
+</div>
+
+<!---------------------- Site footer --------------------------------->
+
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        <p class="text-justify">Pagina realizada por un pequeño grupo de aprendices de BICTIA con la finalidad de recrear un sitio web que facilite la vida de muchos padres de familia mejorando la comunicación con los docentes de sus hijos y asi se generen menos problemas de notificacion y habra una comunicación mas abierta. <i>TODO ESTO BASADO EN LA SITUACION MUNDIAL QUE SE ESTA VIVIENDO A CAUSA DEL COVID-19</i></p>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Categorias</h6>
+        <ul class="footer-links">
+          <li><a href="#">Visual Studio</a></li>
+          <li><a href="#">HTML5</a></li>
+          <li><a href="#">PHP</a></li>
+          <li><a href="#">Java</a></li>
+          <li><a href="#">Css</a></li>
+          <li><a href="#">Amgular</a></li>
+        </ul>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Colaboración:</h6>
+        <ul class="footer-links">
+          <img width="190" height="75" src="img/Ispa.png" alt="">
+          <img width="190" height="75" src="img/bictia.jpeg" alt="">
+        </ul>
+      </div>
+
+    </div>
+    <hr>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by Santiago
+        </p>
+      </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <ul class="social-icons">
+          <li><a class="facebook" href="https://www.facebook.com/profile.php?id=100029329263868" target="blank"><i class="fa fa-facebook"></i></a></li>
+          <li><a class="twitter" href="https://twitter.com/Santi08612395?s=09" target="blank"><i class="fa fa-twitter"></i></a></li>   
+        </ul>
       </div>
     </div>
   </div>
-
-
-
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
